--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@reduxjs/toolkit": "^2.8.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "firebase": "^12.0.0",
     "lucide-react": "^0.525.0",
     "next": "15.3.5",
     "postcss": "^8.5.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-hook-form": "^7.60.0",
     "react-redux": "^9.2.0",
     "tailwind-merge": "^3.3.1",
